--- a/assets/styles/_layout.scss
+++ b/assets/styles/_layout.scss
@@ -13,3 +13,45 @@
     margin-top: 0.1rem;
   }
 }
+.center {
+  text-align: center;
+}
+.footer-heading,
+.footer-subheading {
+  display: inline;
+}
+.footer-subheading {
+  font-size: 0.8rem;
+  color: $grey-color;
+}
+.footer-claim {
+  margin-top: 1rem;
+  text-align: center;
+}
+.site-footer {
+  nav {
+    a {
+      color: $text-color;
+    }
+  }
+}
+
+.cta {
+  display: inline-block;
+  padding: 1rem 2rem;
+  border: 2px solid $brand-color;
+  font-size: 1.5rem;
+  margin: 1rem;
+  margin: auto;
+  border-radius: 0.3rem;
+  color: $text-color;
+  &:visited {
+    color: $text-color;
+  }
+  &:hover,
+  &:focus {
+    text-decoration: none;
+    color: $brand-color;
+    background: $grey-color-light;
+  }
+}
