add simple analytics script

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,3 +24,5 @@
     </nav>
   </div>
 </footer>
+<script async defer src="https://sa.budgetbudget.app/latest.js"></script>
+<noscript><img src="https://sa.budgetbudget.app/noscript.gif" alt=""/></noscript>
