feat: show arm64 downloads
ref https://github.com/Xiphe/budgetbudget/issues/68

--- a/assets/styles/_layout.scss
+++ b/assets/styles/_layout.scss
@@ -41,8 +41,7 @@
   padding: 1rem 2rem;
   border: 2px solid $brand-color;
   font-size: 1.5rem;
-  margin: 1rem;
-  margin: auto;
+  margin: 0.5rem auto;
   border-radius: 0.3rem;
   color: $text-color;
   &:visited {
