--- a/assets/styles/_download.scss
+++ b/assets/styles/_download.scss
@@ -1,5 +1,5 @@
 .downloadWrap {
-  padding-left: 1rem;
+  padding: 0 0 1rem 1rem;
 }
 .warning {
   background: rgb(253, 210, 146);
@@ -23,8 +23,7 @@
 }
 .changelogToggle {
   display: inline-block;
-  margin: 0 0.5rem;
-  padding: 0.1rem 0.3rem;
+  padding: 0.1rem 0.3rem 0.1rem 0;
   border: 0;
   background: none;
   color: #828282;
